--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -1,8 +1,3 @@
-html {
-  scroll-behavior: smooth;
-  font-size: 10px;
-}
-
 @font-face {
   font-family: "Arial";
   src: url("../../assets/fonts/arial.ttf");
@@ -20,6 +15,32 @@ html {
   src: url("../../assets/fonts/georgiab.ttf");
 }
 
+:root {
+  color: var(--color-dark-3xl);
+
+  --font-additional: "Georgia", serif;
+  --color-primary: #f1cdb3;
+  --color-modal: #000000;
+  --color-transparent: transparent;
+  --color-light-s: #fafafa;
+  --color-light-m: #fddcc4;
+  --color-light-l: #f6f6f6;
+  --color-light-xl: #ffffff;
+  --color-dark-s: #cdcdcd;
+  --color-dark-m: #b2b2b2;
+  --color-dark-l: #545454;
+  --color-dark-xl: #4c4c4c;
+  --color-dark-3xl: #292929;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 10px;
+  font-family: "Arial", serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
 /* ----------------------------HEADER---------------------------- */
 .container {
   max-width: 1280px;
@@ -28,7 +49,7 @@ html {
 }
 
 .header {
-  background-color: #ffffff;
+  background-color: var(--color-light-xl);
   background-size: 100%;
   position: sticky;
   top: 0;
@@ -41,7 +62,8 @@ html {
 }
 
 .logo-title {
-  font-family: "Georgia", "Noto Serif Georgian", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 32px; */
@@ -56,9 +78,9 @@ html {
 
 .logo-subtitle {
   display: block;
-  font-family: "Arial", serif;
+  /* font-family: "Arial", serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 400; */
   /* font-size: 13px; */
   font-size: 1.3rem;
   line-height: 15px;
@@ -72,13 +94,13 @@ html {
 .logo-link-title {
   text-decoration: none;
   cursor: pointer;
-  color: #545454;
+  color: var(--color-dark-l);
 }
 
 .logo-link-subtitle {
   text-decoration: none;
   cursor: pointer;
-  color: #292929;
+  color: var(--color-dark-3xl);
 }
 
 .header-nav {
@@ -94,31 +116,31 @@ html {
 }
 
 .header-link {
-  font-family: "Arial", serif;
+  /* font-family: "Arial", serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 400; */
   /* font-size: 15px; */
   font-size: 1.5rem;
   line-height: 160%;
-  color: #545454;
+  color: var(--color-dark-l);
   text-decoration: none;
   transition: 1s;
-  border-bottom: 3px solid transparent;
+  border-bottom: 3px solid var(--color-transparent);
 }
 
 .header-link:hover {
-  color: #292929;
+  color: var(--color-dark-3xl);
 }
 
 .bottom {
-  border-bottom: 3px solid #f1cdb3;
+  border-bottom: 3px solid var(--color-primary);
   padding-bottom: 4px;
-  color: #292929;
+  color: var(--color-dark-3xl);
 }
 
 /* ----------------------------OUR FRIENDS---------------------------- */
 .our-friends {
-  background: #f6f6f6;
+  background-color: var(--color-light-l);
   background-size: 100%;
 }
 
@@ -135,7 +157,8 @@ html {
 }
 
 .our-friends-title {
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 35px; */
@@ -143,7 +166,7 @@ html {
   line-height: 130%;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #545454;
+  color: var(--color-dark-l);
   padding-bottom: 57px;
 }
 
@@ -169,13 +192,13 @@ html {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  background: #fafafa;
+  background-color: var(--color-light-s);
   border-radius: 9px;
   transition: 1s;
 }
 
 .card:hover {
-  background: #ffffff;
+  background-color: var(--color-light-xl);
   cursor: pointer;
   box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
@@ -185,43 +208,45 @@ html {
 }
 
 .card-name {
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 20px; */
   font-size: 2rem;
   line-height: 23px;
   letter-spacing: 0.06em;
-  color: #545454;
+  color: var(--color-dark-l);
   padding-top: 33px;
 }
 
 .card-button {
   padding: 14px 44px;
-  border: 2px solid #f1cdb3;
+  border: 2px solid var(--color-primary);
   border-radius: 100px;
-  background: #fafafa;
+  background-color: var(--color-light-s);
   margin: 27px 0px;
   transition: 1s;
 }
 
 .card:hover .card-button {
-  background: #fddcc4;
+  background-color: var(--color-light-m);
   cursor: pointer;
-  border: #fddcc4;
+  border: var(--color-light-m);
 }
 
 /* ----modal---- */
 .card-link {
   text-decoration: none;
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 17px; */
   font-size: 1.7rem;
   line-height: 130%;
   letter-spacing: 0.06em;
-  color: #292929;
+  color: var(--color-dark-3xl);
 }
 
 .modal-block {
@@ -254,7 +279,7 @@ html {
   height: 500px;
   margin: 10% auto;
   border-radius: 9px;
-  background: #fafafa;
+  background-color: var(--color-light-s);
   border: none;
   transform: translate(0px, -100%);
   opacity: 0;
@@ -278,13 +303,13 @@ html {
   width: 52px;
   height: 52px;
   padding: 10px 15px;
-  border: 2px solid #f1cdb3;
+  border: 2px solid var(--color-primary);
   border-radius: 50%;
   transition: 1s;
 }
 
 .close:hover {
-  background: #fddcc4;
+  background-color: var(--color-light-m);
   cursor: pointer;
 }
 
@@ -308,26 +333,28 @@ html {
   padding-left: 10px;
   padding-top: 50px;
   padding-bottom: 10px;
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 35px; */
   font-size: 3.5rem;
   line-height: 130%;
   letter-spacing: 0.06em;
-  color: #000000;
+  color: var(--color-modal);
 }
 
 .modal-subtitle {
   padding-left: 10px;
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 20px; */
   font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
-  color: #000000;
+  color: var(--color-modal);
 }
 
 .modal-text {
@@ -335,14 +362,15 @@ html {
   padding-bottom: 20px;
   padding-left: 10px;
   width: 360px;
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 15px; */
   font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
-  color: #000000;
+  color: var(--color-modal);
 }
 
 .modal-ul {
@@ -353,30 +381,32 @@ html {
 
 .modal-li {
   padding-bottom: 10px;
-  color: #f1cdb3;
+  color: var(--color-primary);
 }
 
 .modal-span1 {
   padding-left: 5px;
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 700;
   /* font-size: 15px; */
   font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
-  color: #000000;
+  color: var(--color-modal);
 }
 
 .modal-span2 {
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 15px; */
   font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
-  color: #000000;
+  color: var(--color-modal);
 }
 
 .slider-block {
@@ -389,29 +419,29 @@ html {
 .slider-button {
   width: 52px;
   height: 52px;
-  border: 2px solid #cdcdcd;
+  border: 2px solid var(--color-dark-s);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 10px;
-  background: #f6f6f6;
+  background-color: var(--color-light-l);
 }
 
 .one {
-  border: 2px solid #fddcc4;
-  background: #fddcc4;
+  border: 2px solid var(--color-light-m);
+  background-color: var(--color-light-m);
 }
 
 .switch {
-  border: 2px solid #f1cdb3;
+  border: 2px solid var(--color-primary);
   transition: 1s;
 }
 
 .switch:hover {
-  background: #fddcc4;
+  background-color: var(--color-light-m);
   cursor: pointer;
-  border: #f1cdb3;
+  border: var(--color-primary);
 }
 
 /* ----------------------------FOOTER---------------------------- */
@@ -436,14 +466,15 @@ html {
 }
 
 .footer-title {
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 35px; */
   font-size: 3.5rem;
   line-height: 130%;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--color-light-xl);
 }
 
 .link-box-contacts {
@@ -464,14 +495,15 @@ html {
 }
 
 .footer-link {
-  font-family: "Georgia", serif;
+  /* font-family: "Georgia", serif; */
+  font-family: var(--font-additional);
   font-style: normal;
   font-weight: 400;
   /* font-size: 20px; */
   font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
-  color: #f1cdb3;
+  color: var(--color-primary);
   text-decoration: none;
 }
 
