--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -16,10 +16,10 @@
   --color-dark-3xl: #292929;
 }
 
-/* -----------------------768px------------------------- */
+/* -----------------------768px - 1279px------------------------- */
 /* @media (min-width: 321px) and (max-width: 768px) */
 
-@media (max-width: 768px) {
+@media (max-width: 1279px) {
   .container {
     max-width: 768px;
     padding: 0 30px;
@@ -29,10 +29,12 @@
   .header {
     background-image: url("../../assets/images/bg-768.jpg");
     background-size: 100%;
+    /* max-width: 100vw; */
   }
 
   .header-container {
     height: 60px;
+    max-width: 100vw;
   }
 
   .logo-title {
@@ -264,8 +266,12 @@
   }
 }
 
-/* -----------------------320px------------------------- */
-@media (max-width: 320px) {
+/* @media (max-width: 767px) and (min-width: 320px){
+
+} */
+
+/* ----------------------- 320 px - 767px ------------------------- */
+@media (max-width: 767px) {
   .container {
     max-width: 320px;
     padding: 0;
@@ -278,15 +284,19 @@
 
   .header-container {
     justify-content: space-between;
+    max-width: 100vw;
   }
 
   .logo {
     padding-left: 10px;
+    z-index: 2;
+    /* margin-left: 500px; */
   }
 
   .logo.active {
     position: absolute;
     z-index: 2;
+    /* right: 70px; */
   }
 
   .hamburger {
