--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -16,12 +16,17 @@
   --color-dark-3xl: #292929;
 }
 
-/* -----------------------768px------------------------- */
+/* -----------------------768px - 1279px------------------------- */
 
-@media (max-width: 768px) {
+@media (max-width: 1279px) {
   .container {
     max-width: 768px;
     padding: 0 30px;
+  }
+
+  /* ----------------------------HEADER---------------------------- */
+  .header-container {
+    max-width: 100vw;
   }
 
   /* ----------------------------OUR FRIENDS---------------------------- */
@@ -159,8 +164,8 @@
   }
 }
 
-/* -----------------------320px------------------------- */
-@media (max-width: 320px) {
+/* ----------------------- 320 px - 767px ------------------------- */
+@media (max-width: 767px) {
   .container {
     max-width: 320px;
     padding: 0;
@@ -169,6 +174,7 @@
   /* ----------------------------HEADER---------------------------- */
   .header-container {
     justify-content: space-between;
+    max-width: 100vw;
   }
 
   .logo.active {
