--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -170,6 +170,11 @@
   }
 
   /* ----------------------------HEADER---------------------------- */
+  .header.active {
+    background: rgba(41, 41, 41, 0.6);
+    position: relative;
+  }
+
   .header-container {
     justify-content: space-between;
     max-width: 100vw;
@@ -177,12 +182,13 @@
 
   .logo {
     padding-left: 10px;
+    transition: 0.7s;
   }
 
   .logo.active {
     position: absolute;
     z-index: 2;
-    right: 125px;
+    transform: translate(calc(100vw - 300px), 0);
   }
 
   .logo-title {
@@ -201,6 +207,7 @@
     top: 40px;
     right: 53px;
     z-index: 2;
+    transition: 0.7s;
   }
 
   .hamburger.active {
@@ -213,8 +220,6 @@
     display: block;
     background-color: var(--color-modal);
     margin: 8px auto;
-    transition: all 0.3s ease-in-out;
-    transition: 0.7s;
   }
 
   .hamburger:hover {
@@ -242,6 +247,11 @@
     align-items: center;
   }
 
+  .header-nav.active {
+    position: absolute;
+    right: 0px;
+  }
+
   .header-li {
     display: block;
     margin: 0;
@@ -255,15 +265,15 @@
     font-size: 3.2rem;
   }
 
-  .header-nav.active {
-    position: absolute;
-    right: 0px;
-  }
-
   /* ----------------------------OUR FRIENDS---------------------------- */
   .our-friends-container {
     height: 1649px;
     padding-top: 41px;
+  }
+
+  .our-friends.active {
+    background: rgba(41, 41, 41, 0.6);
+    opacity: 0.5;
   }
 
   .our-friends-block {
