--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -164,6 +164,10 @@
 
 /* ----------------------- 320 px - 767px ------------------------- */
 @media (max-width: 767px) {
+  body.active {
+    overflow: hidden;
+  }
+
   .container {
     max-width: 320px;
     padding: 0;
