--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -154,7 +154,7 @@
   .modal-content {
     max-width: 630px;
     height: 350px;
-    margin: 10% auto;
+    margin: 20% auto;
   }
 
   .modal-image {
@@ -266,36 +266,30 @@
 
 /* ----------------------- 320 px - 767px ------------------------- */
 @media (max-width: 767px) {
-  body.active {
+  /* body.active {
     overflow: hidden;
-  }
-  /* .scroll {
-    overflow: scroll;
     height: 100%;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(41, 41, 41, 0.6);
+    background-size: 100%;
   } */
 
-  /* #help {
-    overflow: auto;
-    height: 100px;
-  } */
   .container {
     max-width: 320px;
     padding: 0;
   }
-  /* .container.active {
-    background: rgba(41, 41, 41, 0.6);
-    opacity: 0.5;
-  } */
 
   /* ----------------------------HEADER---------------------------- */
   .header {
     background-image: url("../../assets/images/bg-320.jpg");
     background-size: 100%;
   }
-
+  /* 
   .header.active {
     background: rgba(41, 41, 41, 0.6);
-  }
+    z-index: 2;
+  } */
 
   .header-container {
     justify-content: space-between;
@@ -309,7 +303,7 @@
 
   .logo.active {
     position: absolute;
-    z-index: 2;
+    z-index: 5;
     /* right: 125px; */
     transform: translate(calc(100vw - 300px), 0);
   }
@@ -319,7 +313,7 @@
     position: absolute;
     top: 40px;
     right: 53px;
-    z-index: 2;
+    z-index: 4;
     transition: 0.7s;
   }
 
@@ -348,7 +342,7 @@
     background-image: url("../../assets/images/bg-burger-320.jpg");
     overflow-x: hidden;
     transition: right 0.7s;
-    z-index: 1;
+    z-index: 3;
     padding-top: 249px;
     padding-right: 21px;
   }
@@ -378,6 +372,17 @@
     font-size: 3.2rem;
   }
 
+  .shadow.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(41, 41, 41, 0.6);
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+  }
+
   /* ----------------------------NOT ONLY---------------------------- */
   .not-only-container {
     padding-top: 0;
@@ -389,9 +394,14 @@
   }
 
   .not-only.active {
-    background: rgba(41, 41, 41, 0.6);
+    /* background: rgba(41, 41, 41, 0.6); */
+    /* z-index: 7; */
+    /* z-index: 2; */
+    /* position: fixed; */
+    /* top: 0; */
+    /* left: 0; */
     /* background: rgba(0, 0, 0, 0.4); */
-    opacity: 0.5;
+    /* opacity: 0.6; */
   }
 
   .not-only-block {
@@ -530,8 +540,20 @@
     display: block;
   }
 
+  .previous-320:hover {
+    background-color: var(--color-light-m);
+    cursor: pointer;
+    border: var(--color-light-m);
+  }
+
   .next-320 {
     display: block;
+  }
+
+  .next-320:hover {
+    background-color: var(--color-light-m);
+    cursor: pointer;
+    border: var(--color-light-m);
   }
 
   .our-friends-button {
@@ -542,6 +564,7 @@
   .modal-content {
     max-width: 240px;
     height: 341px;
+    margin: 30% auto;
   }
 
   .close {
