--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -81,7 +81,7 @@
   .modal-content {
     max-width: 630px;
     height: 350px;
-    margin: 10% auto;
+    margin: 20% auto;
   }
 
   .close {
@@ -164,9 +164,9 @@
 
 /* ----------------------- 320 px - 767px ------------------------- */
 @media (max-width: 767px) {
-  body.active {
+  /* body.active {
     overflow: hidden;
-  }
+  } */
 
   .container {
     max-width: 320px;
@@ -174,10 +174,10 @@
   }
 
   /* ----------------------------HEADER---------------------------- */
-  .header.active {
+  /* .header.active {
     background: rgba(41, 41, 41, 0.6);
     position: relative;
-  }
+  } */
 
   .header-container {
     justify-content: space-between;
@@ -191,7 +191,7 @@
 
   .logo.active {
     position: absolute;
-    z-index: 2;
+    z-index: 5;
     transform: translate(calc(100vw - 300px), 0);
   }
 
@@ -210,7 +210,7 @@
     position: absolute;
     top: 40px;
     right: 53px;
-    z-index: 2;
+    z-index: 4;
     transition: 0.7s;
   }
 
@@ -239,7 +239,7 @@
     background-color: var(--color-light-xl);
     overflow-x: hidden;
     transition: right 0.7s;
-    z-index: 1;
+    z-index: 3;
     padding-top: 249px;
     padding-right: 21px;
   }
@@ -269,16 +269,27 @@
     font-size: 3.2rem;
   }
 
+  .shadow.active {
+    display: block;
+    position: fixed;
+    /* position: relative; */
+    top: 0;
+    left: 0;
+    background: rgba(41, 41, 41, 0.6);
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+  }
   /* ----------------------------OUR FRIENDS---------------------------- */
   .our-friends-container {
     height: 1649px;
     padding-top: 41px;
   }
 
-  .our-friends.active {
+  /* .our-friends.active {
     background: rgba(41, 41, 41, 0.6);
     opacity: 0.5;
-  }
+  } */
 
   .our-friends-block {
     padding: 0;
@@ -335,6 +346,7 @@
   .modal-content {
     max-width: 240px;
     height: 341px;
+    margin: 30% auto;
   }
 
   .close {
