--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -39,6 +39,10 @@ html {
   font-weight: 400;
 }
 
+/* body.active {
+  overflow: hidden;
+} */
+
 /* ----------------------------HEADER---------------------------- */
 .container {
   max-width: 1280px;
@@ -134,6 +138,10 @@ html {
   border-bottom: 3px solid var(--color-primary);
   padding-bottom: 4px;
   color: var(--color-dark-3xl);
+}
+
+.shadow {
+  display: none;
 }
 
 /* ----------------------------OUR FRIENDS---------------------------- */
