--- a/shelter/pages/main/style-adaptive.css
+++ b/shelter/pages/main/style-adaptive.css
@@ -266,14 +266,14 @@
 
 /* ----------------------- 320 px - 767px ------------------------- */
 @media (max-width: 767px) {
-  /* body.active {
+  body.active {
     overflow: hidden;
-    height: 100%;
+    /* height: 100%;
     height: 100vh;
     width: 100vw;
     background: rgba(41, 41, 41, 0.6);
-    background-size: 100%;
-  } */
+    background-size: 100%; */
+  }
 
   .container {
     max-width: 320px;
