fix: clean code

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -11,7 +11,7 @@
 @font-face {
   font-family: "Georgia", serif;
   font-weight: 700;
-  src: url("../../assets/fonts/georgiab.ttf");
+  src: url("../../assets/fonts/georgia.ttf");
 }
 
 :root {
