--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -1,17 +1,18 @@
 @font-face {
-  font-family: "Arial", serif;
+  font-family: "Arial";
   src: url("../../assets/fonts/arial.ttf");
 }
+
 @font-face {
-  font-family: "Georgia", serif;
+  font-family: "Georgia";
   font-weight: 400;
   src: url("../../assets/fonts/georgia.ttf");
 }
 
 @font-face {
-  font-family: "Georgia", serif;
+  font-family: "Georgia";
   font-weight: 700;
-  src: url("../../assets/fonts/georgia.ttf");
+  src: url("../../assets/fonts/georgiab.ttf");
 }
 
 :root {
